style(frontend): Fix z-index for nav panel / workout drop-down / create meso dialog - Also set min-height for PlanAMesocycle's dialog

--- a/frontend/src/components/LeftPanel/LeftPanel.module.css
+++ b/frontend/src/components/LeftPanel/LeftPanel.module.css
@@ -1,5 +1,5 @@
 .left_panel {
-    z-index: 1000;
+    z-index: 1002;
     position: fixed;
     left: 0;
     width: 250px;
