--- a/frontend/src/components/PlanAMesocycle/PlanAMesocycle.module.css
+++ b/frontend/src/components/PlanAMesocycle/PlanAMesocycle.module.css
@@ -162,7 +162,7 @@
 /* Modal dialog */
 
 .dialog_background {
-    z-index: 1000;
+    z-index: 1003;
     position: fixed;
     display: flex;
     justify-content: center;
@@ -181,6 +181,7 @@
     position: relative;
     width: 500px;
     height: 50%;
+    min-height: 300px;
     color: white;
     background-color: #333333;
     padding: 1rem;
@@ -298,7 +299,6 @@
         display: flex;
         align-items: center;
     }
-
     .mesoname_div label, .numweeks_div label {
         font-size: 0.8rem;
     }
