--- a/frontend/src/components/WorkoutPickerDropdown/WorkoutPickerDropdown.module.css
+++ b/frontend/src/components/WorkoutPickerDropdown/WorkoutPickerDropdown.module.css
@@ -1,6 +1,6 @@
 .component {
     position: absolute;
-    z-index: 1000;
+    z-index: 1001;
     top: 100%;
     left: 0;
     width: 100%;
